# multi-agents

./: pyproject.toml  streamlit_app.py
src/multi_agents/: main.py
