[project]
name = "multi-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rukhsanagull", email = "160248041+misbahkhan99@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.67.5",
    "openai-agents>=0.0.14",
    "streamlit>=1.45.0",
]

[project.scripts]
multi-agents = "multi_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
